# frankenphp-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  PLAN.md  README.md  check_config.sh  check_files.sh  docker-compose-prod.yml  docker-compose.yml  frankenmanager.spec  generate_caddyfile.sh  generate_ssl.sh  install.sh  manage_hosts.sh  pyproject.toml  restart_server.sh  server.sh  utils.sh
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
actions/: start.sh  status.sh  stop.sh
caddy/: Caddyfile  Caddyfile.template  Caddyfile.worker
caddy/sites/default/: localhost_Caddyfile
config/: logrotate-php
docker/: entrypoint.sh
php/: php-prod.ini  php.ini
restart_server.app/Contents/: Info.plist  document.wflow
restart_server.app/Contents/MacOS/: Automator Application Stub
restart_server.app/Contents/_CodeSignature/: CodeResources
scripts/: build.py
src/frankenmanager/: __init__.py  __main__.py  cli.py  exceptions.py
src/frankenmanager/commands/: __init__.py  add_alias.py  add_host.py  list_hosts.py  remove_host.py  reset.py  restart.py  restore_host.py  setup.py  start.py  status.py  stop.py  switch_php.py  trust_ca.py
src/frankenmanager/core/: __init__.py  ca_server.py  caddyfile.py  config.py  database.py  docker_manager.py  environment.py  hosts_manager.py  password_manager.py  php_versions.py  privilege_manager.py  resources.py  ssl_manager.py  updater.py
src/frankenmanager/utils/: __init__.py  validation.py
src/frankenphp_cli/: __init__.py  __main__.py  cli.py
src/frankenphp_cli/commands/: __init__.py  restart.py  setup.py  start.py  status.py  stop.py
src/frankenphp_cli/core/: __init__.py  caddyfile.py  config.py  docker_manager.py  environment.py  hosts_manager.py  privilege_manager.py
src/frankenphp_cli/resources/: .env.example
src/frankenphp_cli/resources/caddy/: Caddyfile  Caddyfile.template
src/frankenphp_cli/resources/php/: php.ini
src/frankenphp_cli/utils/: __init__.py  logging.py  platform.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_database.py  test_reset.py  test_validation.py
