[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frankenmanager"
version = "1.0.0"
description = "FrankenPHP Docker development environment manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "LEOBSST"},
    {name = "B.L.A.M. PRODUCTION"}
]
keywords = ["frankenphp", "frankenmanager", "docker", "php", "development", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
frankenmanager = "frankenphp_cli.cli:app"

[project.urls]
Homepage = "https://blam-prod.fr"
Documentation = "https://github.com/leobsst/frankenphp-cli/blob/python/README.md"
Repository = "https://github.com/leobsst/frankenphp-cli/tree/python"

[tool.hatch.build.targets.wheel]
packages = ["src/frankenphp_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/frankenphp_cli/resources" = "frankenphp_cli/resources"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP007"]  # Allow Union[X, Y] for Python 3.9 compatibility

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/frankenphp_cli"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
